# cc

./: CMakeLists.txt  LICENSE  README.md  build.sh
examples/: test.c
include/: arena.h  assembly.h  ast.h  common.h  compile.h  hash.h  lexer.h  log.h  map.h  parser.h  semantic_analysis.h  slice.h  token.h  type.h  variable_table.h  vec.h  writer.h
include/cc/: arena.h  ast.h  common.h  compile.h  function_signature.h  hash.h  integer_size.h  lexer.h  log.h  map.h  parser.h  read_file_to_string.h  slice.h  token.h  type.h  vec.h  writer.h
include/cc/compile/: assembly.h  binary_op.h  block.h  call.h  calling_convention.h  compiler.h  error.h  expression.h  function_definition.h  function_signature.h  function_table.h  root.h  statement.h  type.h  variable_table.h
include/cc/template/: map.h  map.inl  slice.h  vec.h  vec.inl
include/template/: map.h  map.inl  slice.h  slice.inl  vec.h  vec.inl
input/: test.c
output/: test  test.asm
src/: arena.c  assembly.c  ast.c  compile.c  hash.c  lexer.c  log.c  main.c  map.c  parser.c  read_file_to_string.c  slice.c  token.c  type.c  variable_table.c  vec.c  writer.c
src/cc/: arena.c  ast.c  compile.c  function_signature.c  hash.c  integer_size.c  lexer.c  log.c  main.c  map.c  parser.c  read_file_to_string.c  slice.c  token.c  type.c  vec.c  writer.c
src/cc/compile/: assembly.c  binary_op.c  block.c  call.c  calling_convention.c  compiler.c  error.c  expression.c  function_definition.c  function_signature.c  function_table.c  root.c  statement.c  type.c  variable_table.c
